[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/vinette.png" type="Texture" id=1]
[ext_resource path="res://Sprites/monster.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Monster.gd" type="Script" id=3]
[ext_resource path="res://Audio/crunch.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/slurp.wav" type="AudioStream" id=5]
[ext_resource path="res://Audio/angry.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0208

[node name="Monster" type="Node2D"]
script = ExtResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 50, 0 )

[node name="MonsterOrigin" type="Node2D" parent="."]

[node name="MonsterBody" type="Area2D" parent="MonsterOrigin"]
position = Vector2( 60, 0 )

[node name="Shadow" type="Sprite" parent="MonsterOrigin/MonsterBody"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="MonsterOrigin/MonsterBody"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonsterOrigin/MonsterBody"]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="MonsterOrigin/MonsterBody"]
cast_to = Vector2( 30, 0 )

[node name="EatSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DrinkSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="AngrySound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
